0.12/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_greater_or_equal(1000)
    check





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is greater or equal to 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset

    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [{'details': 'Test dataset contains 3 samples', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is greater or equal to 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 50-60

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 62-70

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: default


    from deepchecks.tabular.suites import train_test_validation

    suite = train_test_validation()
    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is less than 0.2
    			1: Train features' Predictive Power Score is less than 0.7
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 77-78

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 78-86

.. code-block:: default


    # Access check by id
    check = suite[8]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 87-89

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_less_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    			2: Train-Test features' Predictive Power Score difference is less than 0.01
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 96-102

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 102-115

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import DatasetsSizeComparison

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 116-126

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 126-148

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 152-162

.. code-block:: default


    from deepchecks.tabular import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Suite for Condition:
    |     | 0/1 [Time: 00:00]                                              

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2023 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite for Condition</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"21fa157f2ef8455993fb08896fb5f0fd": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "_titles": {"0": "Suite for Condition"}, "children": ["IPY_MODEL_f85d5d69eb134726b537a92bbc3440d0"], "layout": "IPY_MODEL_8cbe650f1e12479ca455267cec903d5f"}}, "f85d5d69eb134726b537a92bbc3440d0": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_d07c42b1c0204c969fdce107dec4c95f", "IPY_MODEL_5b400b51609343b3a86ef58311abcba3", "IPY_MODEL_d5401e58d4f843f39b0fccb6ff58b673", "IPY_MODEL_5eee8607400f46e6be028dd804a75e5a", "IPY_MODEL_019c22439a8f476c9975bc2c07a50621"], "layout": "IPY_MODEL_3ed3aa5446a24d208f28f0eac54d6c12"}}, "d07c42b1c0204c969fdce107dec4c95f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e95a02255abe478197edf23173c45a83", "style": "IPY_MODEL_ab8c26e9168e4e4198a81f8a91156703", "value": "\n<h1 id=\"summary_JCAT9MX2X18HAFEYUHZ1GV0E3\">Suite for Condition</h1>\n<p>\n    The suite is composed of the following checks: Datasets Size Comparison.<br>\n    Each check may contain conditions (which will result in pass <span style=\"color: green;display:inline-block\">\u2713</span> /\n    fail <span style=\"color: red;display:inline-block\">\u2716</span> / warning <span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> / error <span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>) as well as\n    other outputs such as plots or tables.<br>\n    Suites, checks and conditions can all be modified. Read more about\n    <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n</p>\n\n"}}, "e95a02255abe478197edf23173c45a83": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ab8c26e9168e4e4198a81f8a91156703": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "5b400b51609343b3a86ef58311abcba3": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_6cd447fa9ffd45e7ab23285781751f01", "IPY_MODEL_2020290299f14deb831ef9ce25206ccc"], "layout": "IPY_MODEL_6990b3f5e3814990bf628113f44c8b46"}}, "6cd447fa9ffd45e7ab23285781751f01": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_1858ebb4b6d4461180012c3d44133f77", "style": "IPY_MODEL_65c73e376e934be2846fb7e7d1177cd1", "value": "<span id=\"summary_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\"></span>"}}, "1858ebb4b6d4461180012c3d44133f77": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "65c73e376e934be2846fb7e7d1177cd1": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "2020290299f14deb831ef9ce25206ccc": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Pass"}, "children": ["IPY_MODEL_9b981b8a16fd42ffa4b44232198cbe93"], "layout": "IPY_MODEL_fa74a32d426046919f55578f5ea76c40", "selected_index": null}}, "9b981b8a16fd42ffa4b44232198cbe93": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_909aed058be0446994fd0529a8ddbf4a", "IPY_MODEL_93922b763d6747a285a67ceacefb1e98", "IPY_MODEL_9081e38d78824563bb1270015a084586"], "layout": "IPY_MODEL_1b6356e2cd614d39acf15fcb6fd4ed56"}}, "909aed058be0446994fd0529a8ddbf4a": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_b7970fdf78d94358bae9632bd0482c16", "style": "IPY_MODEL_151175ffc3ad435eb8d878c907a646b4", "value": "<style type=\"text/css\">\n#T_9c2a7_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_9c2a7_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_9c2a7_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_9c2a7_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_9c2a7_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_9c2a7_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Check</th>\n      <th class=\"col_heading level0 col2\" >Condition</th>\n      <th class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_9c2a7_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_9c2a7_row0_col1\" class=\"data row0 col1\" ><a href=\"#DatasetsSizeComparison_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\">Datasets Size Comparison</a></td>\n      <td id=\"T_9c2a7_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_9c2a7_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "b7970fdf78d94358bae9632bd0482c16": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "151175ffc3ad435eb8d878c907a646b4": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "93922b763d6747a285a67ceacefb1e98": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_f1b880fa805e457193a3c286c1daaf6b", "style": "IPY_MODEL_aa9562d57991438e89cdf089ed3bd669", "value": "<hr style=\"background-color: #eee;border: 0 none;color: #eee;height: 4px;\">"}}, "f1b880fa805e457193a3c286c1daaf6b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "aa9562d57991438e89cdf089ed3bd669": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "9081e38d78824563bb1270015a084586": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_22ffc6ba947c4dcd95b8f3597d2427db", "IPY_MODEL_6a39f28b142149f4a22999674ba93823", "IPY_MODEL_40db0e94273b422baebcc44a0bfb40d6", "IPY_MODEL_797a14b580604ec48e53e1c4f940b242"], "layout": "IPY_MODEL_eb353ac4c80e4a0d80fd3a976d87fa4d"}}, "22ffc6ba947c4dcd95b8f3597d2427db": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_14c22ae9dc7147b49272b261d28bed34", "style": "IPY_MODEL_3d2e6ed5f24749f99da069783737f0f6", "value": "<h4 id=\"DatasetsSizeComparison_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\"><b>Datasets Size Comparison</b></h4>"}}, "14c22ae9dc7147b49272b261d28bed34": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3d2e6ed5f24749f99da069783737f0f6": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "6a39f28b142149f4a22999674ba93823": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_825120fd54ac4f3384b144a0b8e486b5", "style": "IPY_MODEL_6b847e3a60f1402e9df7b1e4d5392675", "value": "<p>Verify test dataset size comparing it to the train dataset size. <a href=\"https://docs.deepchecks.com/0.12/checks_gallery/tabular/train_test_validation/plot_datasets_size_comparison.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "825120fd54ac4f3384b144a0b8e486b5": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "6b847e3a60f1402e9df7b1e4d5392675": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "40db0e94273b422baebcc44a0bfb40d6": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c2f93d7d85dd4f61ad40f2e4add6ad72", "style": "IPY_MODEL_50ebae9937fc422d97be6efb664dbcd9", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_5c269_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5c269_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5c269_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5c269_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5c269_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_5c269_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_5c269_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_5c269_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_5c269_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "c2f93d7d85dd4f61ad40f2e4add6ad72": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "50ebae9937fc422d97be6efb664dbcd9": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "797a14b580604ec48e53e1c4f940b242": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_534b597acc504ff6b57be276db726915", "IPY_MODEL_75ea403277ab4a18b30900ae4bcad80d", "IPY_MODEL_8844e45e865940718691ac08c1e179bd"], "layout": "IPY_MODEL_588b777682f94ce3a1e8091b8e34424d"}}, "534b597acc504ff6b57be276db726915": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_bdd271bd9e414639beadc69d2f5237f7", "style": "IPY_MODEL_aaa9cad2072e4ef39360dc506d0701b0", "value": "<h5><b>Additional Outputs</b></h5>"}}, "bdd271bd9e414639beadc69d2f5237f7": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "aaa9cad2072e4ef39360dc506d0701b0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "75ea403277ab4a18b30900ae4bcad80d": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_9d6da19f0ab64a04914b1c60ae09d37d", "style": "IPY_MODEL_1403eac18baf451d97325bbcc229ffe5", "value": "<style type=\"text/css\">\n#T_2e895_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2e895_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2e895_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2e895_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2e895_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_2e895_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Train</th>\n      <th class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_2e895_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_2e895_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_2e895_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "9d6da19f0ab64a04914b1c60ae09d37d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1403eac18baf451d97325bbcc229ffe5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8844e45e865940718691ac08c1e179bd": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_56b789445e674b3ba1a182468675682f", "style": "IPY_MODEL_8859d8ace5904a7b97dd11fbf5aa6453", "value": "<br><a href=\"#summary_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\" style=\"font-size: 14px;\">Go to top</a>"}}, "56b789445e674b3ba1a182468675682f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8859d8ace5904a7b97dd11fbf5aa6453": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "588b777682f94ce3a1e8091b8e34424d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "eb353ac4c80e4a0d80fd3a976d87fa4d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1b6356e2cd614d39acf15fcb6fd4ed56": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "fa74a32d426046919f55578f5ea76c40": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "6990b3f5e3814990bf628113f44c8b46": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d5401e58d4f843f39b0fccb6ff58b673": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_f43b8ac2d4404250accdb2f4f6a02e24", "IPY_MODEL_bc42014a116a421798385446058f5a00"], "layout": "IPY_MODEL_cfcac8447fbd41f28bc0f75d1790c820"}}, "f43b8ac2d4404250accdb2f4f6a02e24": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_967d44fa7fae4d388fce63ec3af0a635", "style": "IPY_MODEL_9a69731235aa431eafee1e691bea76f9"}}, "967d44fa7fae4d388fce63ec3af0a635": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "9a69731235aa431eafee1e691bea76f9": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "bc42014a116a421798385446058f5a00": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Passed"}, "children": ["IPY_MODEL_8b88471830704726a51724c1d894fc94"], "layout": "IPY_MODEL_b91136249c0846fda7d55c6273e0917b", "selected_index": null}}, "8b88471830704726a51724c1d894fc94": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_847276d813e14b18ab0f221a13bcd780", "style": "IPY_MODEL_ed355ef7804a4fc7acda1b848a3e6a8f", "value": "<p>No outputs to show.</p>"}}, "847276d813e14b18ab0f221a13bcd780": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ed355ef7804a4fc7acda1b848a3e6a8f": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "b91136249c0846fda7d55c6273e0917b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "cfcac8447fbd41f28bc0f75d1790c820": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "5eee8607400f46e6be028dd804a75e5a": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_13f672932bb54e618cd1169596082b59", "IPY_MODEL_4a4e63a88bea48d3a64ba15fce128adb"], "layout": "IPY_MODEL_e7c6e9a6d4644f74a5f8f5a07de75b41"}}, "13f672932bb54e618cd1169596082b59": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c520519e7dc944a88fb507cf4726d339", "style": "IPY_MODEL_b5cd4c7ebfaf4755ad971c90e413f02c"}}, "c520519e7dc944a88fb507cf4726d339": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "b5cd4c7ebfaf4755ad971c90e413f02c": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "4a4e63a88bea48d3a64ba15fce128adb": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Other"}, "children": ["IPY_MODEL_eb7cbf6e52954e198124e1ed2804cfd5"], "layout": "IPY_MODEL_6e910b458088417db9752aa8519e5b5f", "selected_index": null}}, "eb7cbf6e52954e198124e1ed2804cfd5": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_8c211a724911420da0eed4fd852441d6", "style": "IPY_MODEL_ce31c6741d754de6989bff0feb81d622", "value": "<p>No outputs to show.</p>"}}, "8c211a724911420da0eed4fd852441d6": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ce31c6741d754de6989bff0feb81d622": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "6e910b458088417db9752aa8519e5b5f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "e7c6e9a6d4644f74a5f8f5a07de75b41": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "019c22439a8f476c9975bc2c07a50621": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_f4571b01d4a44d83ae4f74bc989bf122", "IPY_MODEL_ea78180c5f0645e4915c82b979e102d5"], "layout": "IPY_MODEL_b1d94a7b30264aa6bfae9846f0b79b1c"}}, "f4571b01d4a44d83ae4f74bc989bf122": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6c9a26f281d349dca01b9b96dc6e2702", "style": "IPY_MODEL_7faf6491b4eb487a80ab7e1b5e9601d8"}}, "6c9a26f281d349dca01b9b96dc6e2702": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "7faf6491b4eb487a80ab7e1b5e9601d8": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ea78180c5f0645e4915c82b979e102d5": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Run"}, "children": ["IPY_MODEL_7b738bf67ae940ad907c1ba6e6ede7f0"], "layout": "IPY_MODEL_60c217345f204c98add9da773930eaa9", "selected_index": null}}, "7b738bf67ae940ad907c1ba6e6ede7f0": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a34f4d778cc64e7687be49786c1975eb", "style": "IPY_MODEL_1de8ded086154fa4b74aa80783bf3ac5", "value": "<p>No outputs to show.</p>"}}, "a34f4d778cc64e7687be49786c1975eb": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1de8ded086154fa4b74aa80783bf3ac5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "60c217345f204c98add9da773930eaa9": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "b1d94a7b30264aa6bfae9846f0b79b1c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3ed3aa5446a24d208f28f0eac54d6c12": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8cbe650f1e12479ca455267cec903d5f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "21fa157f2ef8455993fb08896fb5f0fd"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 163-168

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 168-184

.. code-block:: default


    from deepchecks.core import ConditionCategory, ConditionResult

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.055 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
