0.13/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_greater_or_equal(1000)
    check





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is greater or equal to 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset

    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [{'details': 'Test dataset contains 3 samples', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is greater or equal to 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 50-60

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 62-70

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: default


    from deepchecks.tabular.suites import train_test_validation

    suite = train_test_validation()
    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is less than 0.2
    			1: Train features' Predictive Power Score is less than 0.7
    	9: FeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: LabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 77-78

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 78-86

.. code-block:: default


    # Access check by id
    check = suite[8]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    	9: FeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: LabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 87-89

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_less_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix(n_to_show=5)
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    			2: Train-Test features' Predictive Power Score difference is less than 0.01
    	9: FeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.2
    	10: LabelDrift
    		Conditions:
    			0: categorical drift score < 0.15 and numerical drift score < 0.15 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 96-102

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 102-115

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import DatasetsSizeComparison

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 116-126

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 126-148

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 152-162

.. code-block:: default


    from deepchecks.tabular import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Suite for Condition:
    |     | 0/1 [Time: 00:00]                                              

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2023 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite for Condition</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"531b668424ac4e3f93b40462bf9fc7aa": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "_titles": {"0": "Suite for Condition"}, "children": ["IPY_MODEL_7b24991ac9914b40887baec41270ad53"], "layout": "IPY_MODEL_d487340010814c838b9d0af84ee60131"}}, "7b24991ac9914b40887baec41270ad53": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_d1b8f6abcd3c41168fec1362fc63a008", "IPY_MODEL_9110b72adae94925a6aafedbdc5b02be", "IPY_MODEL_00adfc2f883847279f9f64eb497df8f2", "IPY_MODEL_ec1fb727ff254354abca5636e6fc484a", "IPY_MODEL_e5e276f8a2f34b45bef17ac7ec9d0376"], "layout": "IPY_MODEL_f10f9161b0ae4dceb482310739a668cd"}}, "d1b8f6abcd3c41168fec1362fc63a008": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_fdd344e40d6a4d92bc4a8ebc2d2488f6", "style": "IPY_MODEL_1de9fabdc82044a3a5fd4c16d1863180", "value": "\n<h1 id=\"summary_JCAT9MX2X18HAFEYUHZ1GV0E3\">Suite for Condition</h1>\n<p>\n    The suite is composed of the following checks: Datasets Size Comparison.<br>\n    Each check may contain conditions (which will result in pass <span style=\"color: green;display:inline-block\">\u2713</span> /\n    fail <span style=\"color: red;display:inline-block\">\u2716</span> / warning <span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> / error <span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>) as well as\n    other outputs such as plots or tables.<br>\n    Suites, checks and conditions can all be modified. Read more about\n    <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n</p>\n\n"}}, "fdd344e40d6a4d92bc4a8ebc2d2488f6": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1de9fabdc82044a3a5fd4c16d1863180": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "9110b72adae94925a6aafedbdc5b02be": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_da08ca4e23af4bc092b3a80ff28a05d8", "IPY_MODEL_8c83ef1fe78343e7912e81ee83580b4b"], "layout": "IPY_MODEL_f5e9d55f5a5f4b60bd587128a93a4a47"}}, "da08ca4e23af4bc092b3a80ff28a05d8": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_7377b14e4819490283baf604527cd80f", "style": "IPY_MODEL_8c379556b49b434bb627c7a2e4e1e5ff", "value": "<span id=\"summary_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\"></span>"}}, "7377b14e4819490283baf604527cd80f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8c379556b49b434bb627c7a2e4e1e5ff": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8c83ef1fe78343e7912e81ee83580b4b": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Pass"}, "children": ["IPY_MODEL_bf69985daab54ab89661cfbefb7c83e9"], "layout": "IPY_MODEL_61a66aacef6d48758a36333e1de7aa3e", "selected_index": null}}, "bf69985daab54ab89661cfbefb7c83e9": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_65dad65ef8f8424b9cfbdf40305f1e3f", "IPY_MODEL_bc37d30b12b24d32986c5b519f0eea16", "IPY_MODEL_e54ba07da59d4014886d459deef20ca0"], "layout": "IPY_MODEL_8627217135f34d96a577f9a76b6093cd"}}, "65dad65ef8f8424b9cfbdf40305f1e3f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c3fac885a01348b386a0b8286aea1464", "style": "IPY_MODEL_31df2e14cf374400acf44ec7459d9ec0", "value": "<style type=\"text/css\">\n#T_7988d_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7988d_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7988d_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7988d_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7988d_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_7988d_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Check</th>\n      <th class=\"col_heading level0 col2\" >Condition</th>\n      <th class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_7988d_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_7988d_row0_col1\" class=\"data row0 col1\" ><a href=\"#DatasetsSizeComparison_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\">Datasets Size Comparison</a></td>\n      <td id=\"T_7988d_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_7988d_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "c3fac885a01348b386a0b8286aea1464": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "31df2e14cf374400acf44ec7459d9ec0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "bc37d30b12b24d32986c5b519f0eea16": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_7906f5118a9942029e7e8dd1cb14071b", "style": "IPY_MODEL_66819c390b384d4481510ced29d7fd95", "value": "<hr style=\"background-color: #eee;border: 0 none;color: #eee;height: 4px;\">"}}, "7906f5118a9942029e7e8dd1cb14071b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "66819c390b384d4481510ced29d7fd95": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e54ba07da59d4014886d459deef20ca0": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_2b08dbd8e7bb4d74b54297cd17741290", "IPY_MODEL_182dade19dc64f8f93b9322861ff4e8d", "IPY_MODEL_e33f89d6bc7c4251be477f567a5fbebc", "IPY_MODEL_3ae7b748b96d4730b4e131ce38e6d964"], "layout": "IPY_MODEL_4bdeac6b18b54aa7a2c2a84f238d7fea"}}, "2b08dbd8e7bb4d74b54297cd17741290": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_feaea44c0c364382b636dcb8f060b1ab", "style": "IPY_MODEL_82ed821425e84d17a60de7ea6646bd5a", "value": "<h4 id=\"DatasetsSizeComparison_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\"><b>Datasets Size Comparison</b></h4>"}}, "feaea44c0c364382b636dcb8f060b1ab": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "82ed821425e84d17a60de7ea6646bd5a": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "182dade19dc64f8f93b9322861ff4e8d": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_4b235e531f4540cab72160c556f1a3e4", "style": "IPY_MODEL_69feedbf46b140838eb9069fe602a209", "value": "<p>Verify test dataset size comparing it to the train dataset size. <a href=\"https://docs.deepchecks.com/0.13/checks_gallery/tabular/train_test_validation/plot_datasets_size_comparison.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "4b235e531f4540cab72160c556f1a3e4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "69feedbf46b140838eb9069fe602a209": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e33f89d6bc7c4251be477f567a5fbebc": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_36117a7b52424d5b987cb943b52da440", "style": "IPY_MODEL_1bddb8f249864525970bb9857e9399e4", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_f819a_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f819a_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f819a_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f819a_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f819a_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_f819a_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_f819a_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_f819a_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_f819a_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "36117a7b52424d5b987cb943b52da440": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1bddb8f249864525970bb9857e9399e4": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3ae7b748b96d4730b4e131ce38e6d964": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_6bced11e739144a388cb51a8aa68caae", "IPY_MODEL_df1ae18bfd3e432d862c01d0aeda2641", "IPY_MODEL_124f9cd0afb540df93766f0ecc72c5a8"], "layout": "IPY_MODEL_e4ad138e6992479aa71b6741a23804a8"}}, "6bced11e739144a388cb51a8aa68caae": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_d3c6cf4653a54e5f873054d9f818f87b", "style": "IPY_MODEL_13e952cf6dc64488940c475dc0899f1d", "value": "<h5><b>Additional Outputs</b></h5>"}}, "d3c6cf4653a54e5f873054d9f818f87b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "13e952cf6dc64488940c475dc0899f1d": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "df1ae18bfd3e432d862c01d0aeda2641": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_629e128cf2284e0b82a61b8e501ea017", "style": "IPY_MODEL_016d6b9c3f1c457eaca64b38a7a1b888", "value": "<style type=\"text/css\">\n#T_02c99_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_02c99_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_02c99_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_02c99_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_02c99_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_02c99_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Train</th>\n      <th class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_02c99_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_02c99_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_02c99_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "629e128cf2284e0b82a61b8e501ea017": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "016d6b9c3f1c457eaca64b38a7a1b888": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "124f9cd0afb540df93766f0ecc72c5a8": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_49c9ef1b07d24f3f8c970a1e79ec86b4", "style": "IPY_MODEL_94b8bb79117e45afa158558d52f5f4f6", "value": "<br><a href=\"#summary_JCAT9MX2X18HAFEYUHZ1GV0E3-section-8DALY\" style=\"font-size: 14px;\">Go to top</a>"}}, "49c9ef1b07d24f3f8c970a1e79ec86b4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "94b8bb79117e45afa158558d52f5f4f6": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e4ad138e6992479aa71b6741a23804a8": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4bdeac6b18b54aa7a2c2a84f238d7fea": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8627217135f34d96a577f9a76b6093cd": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "61a66aacef6d48758a36333e1de7aa3e": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f5e9d55f5a5f4b60bd587128a93a4a47": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "00adfc2f883847279f9f64eb497df8f2": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_b69e0d5c300b4fe78139b95c5705c934", "IPY_MODEL_c9d821f457f845128c36f2737e9ef403"], "layout": "IPY_MODEL_51c1f2a20986404cb2fdd9c66f61762d"}}, "b69e0d5c300b4fe78139b95c5705c934": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_812674e37e994b138eee42b3f54b1ec4", "style": "IPY_MODEL_da47e0b2cf2b46b784f801dc67435730"}}, "812674e37e994b138eee42b3f54b1ec4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "da47e0b2cf2b46b784f801dc67435730": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "c9d821f457f845128c36f2737e9ef403": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Passed"}, "children": ["IPY_MODEL_39d1b9a294d8471fb7a5c29efda4ff0b"], "layout": "IPY_MODEL_ef850893e6d04307b3ea3fe095203893", "selected_index": null}}, "39d1b9a294d8471fb7a5c29efda4ff0b": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_117ce0831f1e4908987847d8ab7f69ac", "style": "IPY_MODEL_202c9bcd7fda401c9a0ccc157d27c455", "value": "<p>No outputs to show.</p>"}}, "117ce0831f1e4908987847d8ab7f69ac": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "202c9bcd7fda401c9a0ccc157d27c455": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ef850893e6d04307b3ea3fe095203893": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "51c1f2a20986404cb2fdd9c66f61762d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ec1fb727ff254354abca5636e6fc484a": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_35c749a766374c139ef016af878a78de", "IPY_MODEL_4e6d0c3e386940f786c86fd6a0c25595"], "layout": "IPY_MODEL_46b98781fd434c8fa81085a009da9f74"}}, "35c749a766374c139ef016af878a78de": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_1696b8dfae1346c5b778b6f1efb07a4a", "style": "IPY_MODEL_cc82747473e24f2e98a1a479dd27c554"}}, "1696b8dfae1346c5b778b6f1efb07a4a": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "cc82747473e24f2e98a1a479dd27c554": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "4e6d0c3e386940f786c86fd6a0c25595": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Other"}, "children": ["IPY_MODEL_91abeec3fc1647c1a25ed1b34062d00f"], "layout": "IPY_MODEL_ce18571de2274eadaac6f6b8df93e010", "selected_index": null}}, "91abeec3fc1647c1a25ed1b34062d00f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6757871a88704fa0a17135a9f359b27d", "style": "IPY_MODEL_5fbe935634b64361b49fd7b76d9c178d", "value": "<p>No outputs to show.</p>"}}, "6757871a88704fa0a17135a9f359b27d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "5fbe935634b64361b49fd7b76d9c178d": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ce18571de2274eadaac6f6b8df93e010": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "46b98781fd434c8fa81085a009da9f74": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "e5e276f8a2f34b45bef17ac7ec9d0376": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_93f19b155f82411ea62614f3d80cfe94", "IPY_MODEL_514b0d65170949279d609440d65cacda"], "layout": "IPY_MODEL_90d4e68fc27b42af9687009b6ec41c36"}}, "93f19b155f82411ea62614f3d80cfe94": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_694e63202ff44f9e9ce6138d25a38bbf", "style": "IPY_MODEL_dad0b62a750144db91126fa3a309400e"}}, "694e63202ff44f9e9ce6138d25a38bbf": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "dad0b62a750144db91126fa3a309400e": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "514b0d65170949279d609440d65cacda": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Run"}, "children": ["IPY_MODEL_d781459f67ae45fa82df44b282ac5db0"], "layout": "IPY_MODEL_27708694aa984de1969eada7bab20b25", "selected_index": null}}, "d781459f67ae45fa82df44b282ac5db0": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_1fb7ea2150324f49b47f7b0f6c8aa80e", "style": "IPY_MODEL_97094a3dcba3472c8dd558da55071312", "value": "<p>No outputs to show.</p>"}}, "1fb7ea2150324f49b47f7b0f6c8aa80e": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "97094a3dcba3472c8dd558da55071312": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "27708694aa984de1969eada7bab20b25": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "90d4e68fc27b42af9687009b6ec41c36": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f10f9161b0ae4dceb482310739a668cd": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d487340010814c838b9d0af84ee60131": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "531b668424ac4e3f93b40462bf9fc7aa"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 163-168

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 168-184

.. code-block:: default


    from deepchecks.core import ConditionCategory, ConditionResult

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.055 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
